# python_shop

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
app/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/manifests/: app-deployment.yaml  app-pvc.yaml  app-service.yaml
app/src/config/: settings.py  settings_base.py  settings_dev.py  settings_prod.py  urls.py
app/src/modules/api/: urls.py
app/src/modules/api/models/: cart.py  order.py
app/src/modules/api/static/api/css/: styles.css
app/src/modules/api/views/: __init__.py  index.py  product.py
app/src/modules/authentication/: admin.py  urls.py
app/src/modules/authentication/forms/: login_form.py  signup_form.py
app/src/modules/authentication/models/: __init__.py  admin.py  allauth.py  user.py
app/src/modules/authentication/views/: login.py  signup.py
app/src/modules/web/: admin.py  urls.py
app/src/modules/web/forms/: __init__.py  checkout_form.py
app/src/modules/web/models/: cart.py  category.py  order.py
app/src/modules/web/static/web/css/: styles.css
app/src/modules/web/static/web/js/: toggleDropdown.js
app/src/modules/web/views/: __init__.py  cart.py  category.py  checkout.py  index.py  order.py  product.py
app/src/templates/: base_generic.html
app/src/templates/account/: login.html  logout.html  signup.html  user.html
app/src/templates/api/order/: cart.html
app/src/templates/api/product/: catalog.html
app/src/templates/web/order/: cart.html  checkout.html  order.html  order_history.html
app/src/templates/web/product/: catalog.html  category.html  product.html
app/src/tests/: test_products.py
app/src/utils/: logging.py
db/: Dockerfile  db-network.yaml  db-service.yaml  db-statefulset.yaml  init.sql
nginx/: Dockerfile  nginx-deployment.yaml  nginx-service.yaml  nginx.conf
payment/: Dockerfile  entrypoint.sh  requirements.txt
payment/manifests/: payment-deployment.yaml  payment-network.yaml  payment-service.yaml
python_shop/: settings.py  urls.py
python_shop/settings/: base.py  dev.py  prod.py
shop/: admin.py  apps.py  models.py  urls.py  views.py  wsgi.py
shop/fixtures/: sample.json
shop/order/: models.py
shop/product/: __init__.py  models.py  views.py
shop/templates/: base_generic.html  (+1 more)
(+66 files in other folders)
